# DM_coca_25_11_16

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  run
src/core/: CMakeLists.txt  main.c
src/graphs/: 10K2.c  C10.c  CMakeLists.txt  all.h  chvatal.c  golomb.c  hypercube8.c  kneser62.c  kneser72.c  kneser73.c  kneser83.c  m47.c  m95.c  moser.c  petersen.c  sierp3.c
src/print/: CMakeLists.txt  main.c
